Diverse Korrekturen vorgenommen

--- a/Dokumentation/Recherche/Fahrantrieb.tex
+++ b/Dokumentation/Recherche/Fahrantrieb.tex
@@ -1,11 +1,11 @@
-﻿\section{Fahrantrieb}
+\section{Fahrantrieb}
 Je nach Konzept muss sich der Ballwerfer vor und zurück wie auch seitwärts bewegen können. Dies wird mittels eines Fahrantriebs realisiert. Zum einen ist der Fahrantrieb für den Vortrieb verantwortlich, zum anderen muss er auch ein sicherer Stand des Ballwerfers gewährleisten. Dies ist wichtig um die Genauigkeit des Wurfes nicht zu beeinträchtigen. Weitere Anforderungen, die erfüllt werden müssen, sind die Genauigkeit und das Handling. Der Ballwerfer muss leicht und schnell rangierbar sein und sich möglichst genau auf den Korb ausrichten können. 
 
 \subsection{Raupenantrieb}
 Ein Raupenantrieb bietet im Vergleich mit anderen denkbaren Lösungen viele Vorteile. So zum Beispiel die grösste Auflagefläche auf der Unterlage. Dies ist gleichbedeutend mit der besten Standfestigkeit. Das Laufwerk kann gefedert oder ungefedert ausgeführt sein. Bei der ungefederten Variante kann ein Wurf nahezu ohne Vibrationen ausgeführt werden, da keine Federnden Elemente vorhanden sind. Ein weiterer Vorteil ist die gute Rangierbarkeit: werden die beiden Raupenketten gegenläufig angetrieben, kann sich der Ballwerfer an Ort drehen. Nachteilig sind die vielen Komponenten die für den Antrieb nötig sind. Das Laufwerk besteht aus Antriebsrad und je nach Länge aus mehreren Laufrädern. Diese alle müssen gelagert und geführt werden. 
  
 \subsection{Luftkissenfahrzeug (Hovercraft)}
-Beim Luftkissenfahrteig wird unter dem Rumpf ein Überdruck erzeugt. Auf diesem Luftkissen kann das Fahrzeug vorangleiten. Der Rumpf ist mit einer abriebfesten Kunststoffgewebeschürze versehen, welche das Luftvolumen möglichst unter dem Fahrzeug hält. Der Vortrieb und die Lenkung wird mittels eines Propellers auf dem Fahrzeug realisiert. Ist der Auftriebsmotor ausgeschaltet, liegt das ganze Fahrzeug auf dem Boden auf, was eine sehr gute Standfestigkeit für den Wurf gibt. Durch die Gewebeschürzen welche zu diesem Zeitpunkt nach wie vor unter dem Fahrzeug befindet, ist jedoch kein komplett waagrechter Stand gewährleistet. Auch müssen viele Komponenten verbaut werden, was sich negativ auf das Gewicht auswirkt.
+Beim Luftkissenfahrzeug wird unter dem Rumpf ein Überdruck erzeugt. Auf diesem Luftkissen kann das Fahrzeug vorangleiten. Der Rumpf ist mit einer abriebfesten Kunststoffgewebeschürze versehen, welche das Luftvolumen möglichst unter dem Fahrzeug hält. Der Vortrieb und die Lenkung wird mittels eines Propellers auf dem Fahrzeug realisiert. Ist der Auftriebsmotor ausgeschaltet, liegt das ganze Fahrzeug auf dem Boden auf, was eine sehr gute Standfestigkeit für den Wurf gibt. Durch die Gewebeschürzen welche sich zu diesem Zeitpunkt nach wie vor unter dem Fahrzeug befinden, ist jedoch kein komplett waagrechter Stand gewährleistet. Auch müssen viele Komponenten verbaut werden, was sich negativ auf das Gewicht auswirkt.
 
 \subsection{Pneufahrzeug}
 Der Ballwerfer steht auf drei oder mehr Rädern. Um einen sicheren Stand zu gewährleisten sollten mindestens zwei Achsen an je zwei Räder verbaut werden. Die Räder können je nach Anforderungen verschieden ausgeführt sein. Luftbefüllt, mit Schlauch, Tubeless oder auch als Vollmaterial. Wobei sich an dieser Stelle das Vollmaterial anbietet, da es bei dessen Verwendung keine Federwirkung durch den Rückstoss des Wurfes gibt. Der Antrieb kann in eine Achse integriert werden und bedarf keinen grösseren Anpassungen. Ein Nachteil ist die Lenkung. Es muss eine Lenkung an mindestens einer Achse realisiert werden, welche je nach Anforderung komplex und platzraubend sein kann.
