--- a/Dokumentation/Recherche/Versorgung.tex
+++ b/Dokumentation/Recherche/Versorgung.tex
@@ -1,20 +1,8 @@
-﻿\section{Versorgung}
-Eine Möglichkeit um das Produkt mit Energie zu versorgen, ist ein Akkumulator. Es gibt verschiedene Typen: Blei-Akkus, Li-Ionen-Akku, Nickel-Cadmium-Akku (NiCd), Nickel-Metallhydird-Akku (NiMh). Jeder Typ hat verschiedene Vor- und Nachteile, die in der Tabelle \ref{tab:UebersichtVorNachTeil} ersichtlich sind.\\
+\section{Versorgung}
+Eine Möglichkeit um das Produkt mit Energie zu versorgen, ist ein Akkumulator. Es gibt verschiedene Typen: Blei-Akku, Li-Ionen-Akku, Nickel-Cadmium-Akku (NiCd), Nickel-Metallhydird-Akku (NiMh). Jeder Typ hat verschiedene Vor- und Nachteile, die in der Tabelle \ref{tab:UebersichtVorNachTeil} ersichtlich sind.\\
 \\
 Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, könnte jedoch eben durch sein Gewicht für zusätzliche Stabilität sorgen, womit er sich als Lösung anbietet. Wichtig für die anschliessende Auswahl eines Akkumulators sind die Spannung, Strom, Kapazität des Akkumulators. An dieser Stelle werden lediglich die Eckdaten ausgewiesen, die die Akkus auszeichnen, wie in der Tabelle \ref{tab:UebersichtAkku} ersichtlich.\\ 
 
-\begin{table}[h!]
-	\begin{tabular}{|p{1.5cm}|p{3.4cm}|p{2.6cm}|p{2.8cm}|} \hline
-		          &\textbf{Energiedichte} ($\frac{Wh}{kg}$)  & \textbf{Wirkungsgrad} & \textbf{Memory-Effekt}\\ \hline
-		NiCd      & 40-60                                    & 70                    & Ja \\ \hline
-		NiMH      & 70-90                                    & 70                    & Nein  \\ \hline
-		Li-Ion    & 120-210                                  & 90                    & Nein \\ \hline
-		Blei (Pb) & 30                                       & 60-70                 & Nein \\ \hline
-	\end{tabular}
-	\centering
-	\caption{Übersicht der Akkumulatoren}
-	\label{tab:UebersichtAkku} 
-\end{table}
 
 \begin{table}[h!]
 	\begin{tabular}{|p{1cm}|p{5cm}|p{6cm}|} \hline
@@ -29,8 +17,21 @@ Gemäss den Anforderungen zählt ein Akkumulator nicht zum bewerteten Gewicht, k
 	\label{tab:UebersichtVorNachTeil} 
 \end{table}
 
+\begin{table}[h!]
+	\begin{tabular}{|p{1.5cm}|p{3.4cm}|p{2.6cm}|p{2.8cm}|} \hline
+		          &\textbf{Energiedichte} ($\frac{Wh}{kg}$)  & \textbf{Wirkungsgrad} & \textbf{Memory-Effekt}\\ \hline
+		NiCd      & 40-60                                    & 70                    & Ja \\ \hline
+		NiMH      & 70-90                                    & 70                    & Nein  \\ \hline
+		Li-Ion    & 120-210                                  & 90                    & Nein \\ \hline
+		Blei (Pb) & 30                                       & 60-70                 & Nein \\ \hline
+	\end{tabular}
+	\centering
+	\caption{Übersicht der Akkumulatoren}
+	\label{tab:UebersichtAkku} 
+\end{table}
+
 \subsection{Externe Versorgung}
-Externe Versorgung bezeichnet die Speisung des Geräts durch ein Netzteil. Ein Vorteil eines Netzteils ist die stabile Energie- / Stromversorgung. Die Zuführung von einer Steckdose zum Spielfeld wird gewährleistet sein. Als einziger Nachteil gilt somit, dass ein Netzteil nicht als Ballast gewertet wird und somit nachteilig für die Bewertung wäre im Vergleich mit einem Akku beispielsweise.
+Externe Versorgung bezeichnet die Speisung des Geräts durch ein Netzteil. Ein Vorteil eines Netzteils ist die stabile Energie- / Stromversorgung. Die Zuführung von einer Steckdose zum Spielfeld wird gewährleistet sein. Als einziger Nachteil gilt somit, dass ein Netzteil nicht als Ballast gewertet wird und somit nachteilig für die Bewertung wäre im Vergleich mit einem Akku.
 
 \subsection{Pneumatik}
 Eine Versorgung mit Druckluft ist aufwendig und muss beim Spielfeld zur Verfügung gestellt werden. Ansonsten müsste man einen Kompressor mit Wartungseinheit organisieren. Zudem sind die Komponenten (Zylinder, Ventile, etc.) im Neuzustand seht teuer.
