--- a/Dokumentation/Recherche/Drehmechanismus.tex
+++ b/Dokumentation/Recherche/Drehmechanismus.tex
@@ -1,13 +1,11 @@
-﻿\section{Drehmechanismus}
+\section{Drehmechanismus}
 Falls der Werfer keine seitlichen Bewegungen ausführen kann, muss er sich mithilfe eines Drehmechanismus auf den Korb ausrichten können. Diese Drehung kann auf verschiedene Weise realisiert werden. Die Anforderung ist, dass sich der Werfer bei Bedarf in einem bestimmten Winkelbereich nach links und rechts bewegen kann. Angetrieben von einem Elektromotor muss diese Verdrehung so präzise sein, dass ein exakter Wurf möglich ist. Weiter spielt nach den Produkteanforderungen auch die Geschwindigkeit der jeweiligen Verschiebung eine Rolle. Die gewählte Art der Kraftübertragung muss demnach geringe Trägheit aufweisen und kleine, aber schnelle Bewegungen ermöglichen. 
  
 \subsection{Riemengetriebe}
-Bei Riemengetrieben wird die zu übertragende Kraft formschlüssig oder kraftschlüssig mit einem Zugmittel übertragen. Als kraftschlüssig übertragende Zugmittel werden Flach-, Keil- und Keilrippenriemen eingesetzt. Als alternative Form gibt es Synchronriemen (Zahnriemen), welche formschlüssig übertragen. \\
-Ein grosser Vorteil des Riemengetriebes ist, dass es in allen erdenklichen Lagen eingesetzt werden kann. Auch können mit nur einer Getriebestufe grosse Übersetzungen erreicht werden. Der Aufbau ist im Vergleich einfach und preiswert. Als Nachteil zu werten ist die elastische Kraftübertragung. Bei hohen Anfahrmomenten dehnt sich der Riemen um einen gewissen Wert, wobei Schlupf entstehen kann. Der Platzbedarf um eine gewisse Kraft zu übertragen ist grösser als bei anderen Prinzipien. Weiter zu beachten ist die elektrostatische Aufladung, welche durch die Reibung entsteht. 
+Bei Riemengetrieben wird die zu übertragende Kraft formschlüssig oder kraftschlüssig mit einem Zugmittel übertragen. Als kraftschlüssig übertragende Zugmittel werden Flach-, Keil- und Keilrippenriemen eingesetzt. Als alternative Form gibt es Synchronriemen (Zahnriemen), welche formschlüssig übertragen. Ein grosser Vorteil des Riemengetriebes ist, dass es in allen erdenklichen Lagen eingesetzt werden kann. Auch können mit nur einer Getriebestufe grosse Übersetzungen erreicht werden. Der Aufbau ist im Vergleich einfach und preiswert. Als Nachteil zu werten ist die elastische Kraftübertragung. Bei hohen Anfahrmomenten dehnt sich der Riemen um einen gewissen Wert, wobei Schlupf entstehen kann. Der Platzbedarf um eine gewisse Kraft zu übertragen ist grösser als bei anderen Prinzipien. Weiter zu beachten ist die elektrostatische Aufladung, welche durch die Reibung entsteht. 
  
 \subsection{Kettengetriebe}
-Kettengetriebe gehören ebenfalls zu den Zugmittelgetrieben. Überwiegend waagrecht verbaut sind sie eine formschlüssige Kraftübertragung zwischen Antriebs- und Abtriebswelle. \\
-Gegenüber dem Riemengetriebe bieten sie den Vorteil der schlupffreien und konstanten Kraftübertragung. Bauartbedingt ist keine Vorspannung der Kette erforderlich. Dies führt zu geringeren Lagerbelastungen. Bei gleicher Belastbarkeit können sie kleiner ausgeführt werden. Ein Nachteil ist der Preis. Kettengetriebe sind teurer, als Riemengetriebe derselben Leistungsstufe.
+Kettengetriebe gehören ebenfalls zu den Zugmittelgetrieben. Überwiegend waagrecht verbaut sind sie eine formschlüssige Kraftübertragung zwischen Antriebs- und Abtriebswelle. Gegenüber dem Riemengetriebe bieten sie den Vorteil der schlupffreien und konstanten Kraftübertragung. Bauartbedingt ist keine Vorspannung der Kette erforderlich. Dies führt zu geringeren Lagerbelastungen. Bei gleicher Belastbarkeit können sie kleiner ausgeführt werden. Ein Nachteil ist der Preis. Kettengetriebe sind teurer, als Riemengetriebe derselben Leistungsstufe.
 
 \subsection{Zahnradgetriebe}
-Diese Getriebe zeichnen sich durch kompakte Bauweise und hohen Wirkungsgrad aus. Auch hier herrscht ein Formschluss, also eine starre Verbindung ohne Schlupf. Zahnradgetriebe bestehen aus einem oder mehreren Zahnradpaaren. Je nach Art des Getriebes können Kraftumlenkungen in verschiedene Richtungen erreicht werden. Hier ist jedoch zu beachten, dass sich der Wirkungsgrad je nach Art wie die Kraftumlenkung erreicht wird, drastisch abnimmt. Mit nur einem Zahnradpaar können nicht so grosse Wellenabstände überbrückt werden, wie mit einem Zugmittelgetriebe. Durch mehrere Zahnradpaare sind sehr grosse Drehzahl – Drehmoment Wandlungen möglich, was allerdings wiederrum in zusätzlichem Gewicht resultiert. 
+Diese Getriebe zeichnen sich durch kompakte Bauweise und hohen Wirkungsgrad aus. Auch hier herrscht ein Formschluss,  eine starre Verbindung ohne Schlupf. Zahnradgetriebe bestehen aus einem oder mehreren Zahnradpaaren. Je nach Art des Getriebes können Kraftumlenkungen in verschiedene Richtungen erreicht werden. Hier ist jedoch zu beachten, dass sich der Wirkungsgrad je nach Art wie die Kraftumlenkung erreicht wird, drastisch abnimmt. Mit nur einem Zahnradpaar können nicht so grosse Wellenabstände überbrückt werden, wie mit einem Zugmittelgetriebe. Durch mehrere Zahnradpaare sind sehr grosse Drehzahl – Drehmoment Wandlungen möglich, was allerdings wiederrum in zusätzlichem Gewicht resultiert. 
