Erste Korrektur (Morphologie - Analyse)

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -4,7 +4,7 @@
 	\begin{figure}[h!]
 		\includegraphics[width=0.9\textwidth]{Morphologie/Bilder/Blockschaltbild.jpg}
 		\centering
-		\caption{Grafische Darstellung der Aufgabenstellung}
+		\caption{Funktionsskizze zur Aufgabenstellung}
 		\label{abb:Blockschaltbild} 
 	\end{figure}
 	
@@ -18,11 +18,10 @@
 		\item Ausgangslage der Bälle
 		\item Weg des Balles (zum Korb)
 	\end{itemize}
-	Zu jedem Teilproblem wurden nun auf Grundlage der Technologierecherche konkrete Lösungen aufgelistet.
+	Als nächster Schritt werden die Teilprobleme genauer definiert. Der Technologierecherche entspringende Lösungsansätze sollen die Problembereiche möglichst gut abdecken.
 	
-	\subsection{Teilprobleme Beurteilen}
-		Um die Lösungsvorschläge der Teilprobleme untereinander vergleichen zu können, wurden zu jedem Teilproblem Bewertungskriterien definiert. Um die jeweiligen Kriterien bestmöglich und vollständig zu bewerten, legten wir die Werte im Plenum unter Einbezug aller Teammitglieder fest.
-		Die Faktoren zur Multiplikation der Bewertungspunkte wurden nach der Zielsetzung des Teams festgelegt:
+	\subsection{Beurteilung der Teilprobleme}
+		Durch die Definition von passenden Beurteilungskriterien sollen die verschiedenen Lösungsansätze für ein Teilproblem taxiert werden. An dieser Stelle bieten sich die definierten Ziele der Teamcharta an:
 		
 		\begin{enumerate}
 			\item Treffgenauigkeit
