--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -8,7 +8,7 @@
 		\label{abb:Blockschaltbild} 
 	\end{figure}
 	
-	Aus der Abbildung \ref{abb:Blockschaltbild} ergeben sich folgende Teilprobleme:
+	Aus der Abbildung \ref{abb:BeurteilungTeilprobleme} ergeben sich folgende Teilprobleme:
 	\begin{itemize}
 		\item Startgerät / Endgerät
 		\item Startbefehlsübermittlung (drahtlos)
@@ -31,7 +31,7 @@
 		Der Faktor Zuverlässigkeit erhält in jedem Teilproblem eine hohe Wert, dies aufgrund der Zielsetzung die eine hohen Zuverlässigkeit aller beteiligten Elemente nach sich zieht. Der Aufwand belegt in der Regel einen kleinen Faktor, da er in einem Schulprojekt einen sekundären Stellenwert hat. Der Faktor der Kosten wurde bewusst im Mittelfeld angesiedelt, um den Fokus auf die Zielsetzung zu legen, aber trotzdem teuren Produkten ein Nachteil einzuhandeln.
 		In der Regel ist die Verteilung der Punkte pro Kriterium so geregelt, dass die schlechteste Lösung 1 Punkt erhält, die beste Lösung 5 Punkte, der Rest einen Wert dazwischen.\\
 		\\
-		Um die nachfolgenden Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:Beurteilung} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
+		Um die nachfolgenden Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:BeurteilungTeilprobleme} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
 		\begin{itemize}
 			\item Ausgangslage der Bälle (Annahme: Kugel (gefüllt mit Bällen) muss geometrisch sein)
 				\begin{itemize}
@@ -108,7 +108,7 @@
 					Netzteile können in kompletter Form gekauft werden. Akku’s müssen mit Elektronik stabilisiert und geregelt werden.
 				\end{itemize}
 				
-			\item Weg des Balles (Nachfolgende Bezeichnungen (..) beziehen sich auf die Nummerierung im Anhang \ref{apx:Beurteilung})			
+			\item Weg des Balles (Nachfolgende Bezeichnungen (..) beziehen sich auf die Nummerierung im Anhang \ref{apx:BeurteilungTeilprobleme})			
 				\begin{itemize}
 					\item Geschwindigkeit\\
 					Je weniger Achsen bewegt werden müssen, desto schneller ist die jeweilige Lösung. (2) muss nur eine Drehbewegung ausführen. (5) muss drei Bewegungen ausführen.
