--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -8,7 +8,7 @@
 		\label{abb:Blockschaltbild} 
 	\end{figure}
 	
-	Aus der Abbildung \ref{abb:BeurteilungTeilprobleme} ergeben sich folgende Teilprobleme:
+	Aus der Abbildung \ref{abb:Blockschaltbild} ergeben sich folgende Teilprobleme:
 	\begin{itemize}
 		\item Startgerät / Endgerät
 		\item Startbefehlsübermittlung (drahtlos)
