Text-Struktur modifiziert

--- a/Dokumentation/Morphologie.tex
+++ b/Dokumentation/Morphologie.tex
@@ -26,9 +26,9 @@
         \begin{appendix}
             \clearpage
             \pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
-            \section{Anhang}
+            %\section{Anhang}
             %\newpage
-            \input{Morphologie/Anhang/Anhang}
+            \input{Morphologie/Anhang/Teilproblembeurteilung}
             \newpage
         \end{appendix}  
 \end{document}
