--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -110,6 +110,12 @@
 			\end{itemize}
 			
 		\subsubsection{Weg des Balles}
+		\enquote{Aus Startposition zu Korb fliegen und abwerfen} nachfolgend als (1) bezeichnet.\\	
+		\enquote{Aus Startposition, gewinkelt durch Luft werfen} nachfolgend als (2) bezeichnet.	\\
+		\enquote{Aus Startposition, seitlich bewegen, gerade aus durch Luft werfen} nachfolgend als (3) bezeichnet.\\
+		\enquote{Aus Startpositionmitte gerade zu Begrenzungslinie bewegen und gewinkelt durch Luft werfen}	nachfolgend als (4) bezeichnet.\\
+		\enquote{Aus Startposition zu Begrenzungslinie gerade vor Korb bewegen und durch Luft werfen} nachfolgend als (5) bezeichnet.\\	
+		
 		Nachfolgende Bezeichnungen (..) beziehen sich auf die Nummerierung im Anhang \ref{apx:BeurteilungTeilprobleme}			
 			\begin{itemize}
 				\item Geschwindigkeit\\
