--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -28,10 +28,21 @@
 			\item Geschwindigkeit
 			\item Gewicht
 		\end{enumerate}
-		Der Faktor Zuverlässigkeit erhält in jedem Teilproblem eine hohe Wert, dies aufgrund der Zielsetzung die eine hohen Zuverlässigkeit aller beteiligten Elemente nach sich zieht. Der Aufwand belegt in der Regel einen kleinen Faktor, da er in einem Schulprojekt einen sekundären Stellenwert hat. Der Faktor der Kosten wurde bewusst im Mittelfeld angesiedelt, um den Fokus auf die Zielsetzung zu legen, aber trotzdem teuren Produkten ein Nachteil einzuhandeln.
-		In der Regel ist die Verteilung der Punkte pro Kriterium so geregelt, dass die schlechteste Lösung 1 Punkt erhält, die beste Lösung 5 Punkte, der Rest einen Wert dazwischen.\\
+		
+		Da diese Ziele direkt durch die Eigenschaften des Werfers definiert werden, sollen sie auch direkt in die Auswahl der Komponenten miteinfliessen. Um das Kriterium Treffergenauigkeit auf alle Teilprobleme abbilden zu können, wurde dieses Ziel als Zuverlässigkeit neu definiert. Nachfolgend der Pool von Bewertungskriterien, aus welchem anschliessend für jedes Teilproblem ein geeignetes Set zur Bewertung ausgewählt wurde.
+		
+		\begin{enumerate}
+			\item Zuverlässigkeit
+			\item Geschwindigkeit
+			\item Gewicht
+			\item Kosten
+			\item Aufwand
+		\end{enumerate}
+		
+		Der Faktor Zuverlässigkeit erhält in jedem Teilproblem einen hohen Wert. Der Aufwand belegt in der Regel einen kleinen Faktor, da er in einem Schulprojekt einen sekundären Stellenwert hat. Der Faktor der Kosten wurde bewusst im Mittelfeld angesiedelt, um den Fokus auf die Zielsetzung zu legen, aber trotzdem teuren Produkten ein Nachteil einzuhandeln.
+		In der Regel ist die Verteilung der Punkte pro Kriterium so geregelt, dass die am schlechtesten geeignete Lösung 1 Punkt erhält, die beste Lösung 5 Punkte und die restlichen einen Wert dazwischen.\\
 		\\
-		Um die nachfolgenden Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:BeurteilungTeilprobleme} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
+		Um die nachfolgende Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:BeurteilungTeilprobleme} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
 		\subsubsection{Ausgangslage der Bälle}
 			Es wird angenommen, dass die Kugel (gefüllt mit Bällen) geometrisch sein muss.
 			\begin{itemize}
