Anhang ordnen, Verlinkung zum Anhang

--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -44,6 +44,7 @@
 		\\
 		Um die nachfolgende Beschreibung zu den Kriterien richtig zu interpretieren, ist die Beurteilung in Anhang \ref{apx:BeurteilungTeilprobleme} zusätzlich zum jeweiligen beschreibenden Text hinzuzuziehen. 
 		\subsubsection{Ausgangslage der Bälle}
+			Ist zusammen mit Anhang \ref{apx:AusgangslageDerBaelle} zu betrachten.
 			Es wird angenommen, dass die Kugel (gefüllt mit Bällen) geometrisch sein muss.
 			\begin{itemize}
 				\item Geschwindigkeit\\
@@ -58,6 +59,7 @@
 				Die Umsetzung eines Trichters ist einfach und schnell erledigt. Der Drehkranz ist aufwändig.					
 			\end{itemize}
 		\subsubsection{Rechenkapazität}
+			Ist zusammen mit Anhang \ref{apx:StartgeraetEndgeraet} zu betrachten.
 			Es wird davon ausgegangen, dass ein Embedded Prozessor günstiger Bauart eingesetzt würde.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
@@ -73,6 +75,7 @@
 			\end{itemize}
 			
 		\subsubsection{Sensorik}
+			Ist zusammen mit Anhang \ref{apx:Sensorik} zu betrachten.
 			\begin{itemize}
 				\item Geschwindigkeit\\
 				Eine Foto mit einer Smartphone Kamera ist schnell geschossen und kann direkt im Smartphone bearbeitet werden. Ein Laser muss viele Punkte abscannen und dabei mechanisch geschwenkt werden.
@@ -87,6 +90,7 @@
 			\end{itemize}
 			
 		\subsubsection{Startbefehlsübermittlung}
+			Ist zusammen mit Anhang \ref{apx:Startbefehlsuebermittlung} zu betrachten.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
 				Bluetooth (und WLAN) basieren auf wohlbekannten, gut dokumentierten, standardisierten Technologien. Akustische Signale können einfach generiert und damit den Prozess erheblich stören.
@@ -97,6 +101,7 @@
 			\end{itemize}
 			
 		\subsubsection{Startgerät – Endgerät}
+			Ist zusammen mit Anhang \ref{abb:StartgeraetEndgeraet} zu betrachten.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
 				Ein Notebook beruht auf wohlbekannten, gut dokumentierten, erprobten Technologien (drahtlos Kommunikation, sowie dazugehöriger Software). Taster muss neu gebaut werden, kann daher fehleranfällig sein.
@@ -109,6 +114,7 @@
 			\end{itemize}
 			
 		\subsubsection{Versorgung Steuerung / Sensorik}
+			Ist zusammen mit Anhang \ref{apx:VersorgungSteuerungSensorik} zu betrachten.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
 				Ein Akku hat im Vergleich zu einem Netzteil höhere Spannungsschwankungen.
