--- a/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
+++ b/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
@@ -1,28 +1,32 @@
 \begin{landscape}
 	\section{Beurteilung der Teilprobleme}
 	\label{apx:BeurteilungTeilprobleme}
-		\subsection{Ausgangslage der Bälle}
-		\label{apx:AusgangslageDerBaelle}}
-		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Ausgangslage_Baelle.pdf}
-		\newpage
+	
 		\subsection{Startgerät-Endgerät}
 		\label{apx:StartgeraetEndgeraet}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Startgeraet-Endgeraet.pdf}
 		\newpage
 		\subsection{Startbefehlübermittlung}
-		
+		\label{apx:Startbefehluebermittlung}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Startbefehluebermittlung.pdf}
 		\newpage
-		\subsection{Ausgangslage Rechnerkapazität}
+		\subsection{Rechenkapazität}
+		\label{apx:Rechenkapazitaet}
 		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Rechenkapazitaet.pdf}
 		\newpage
-		\subsection{Versorgung und Steuerung}
-		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Versorgung_Steuerung.pdf}
-		\newpage
 		\subsection{Sensorik}
+		\label{apx:Sensorik}
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Sensorik.pdf}
 		\newpage
-		
+		\subsection{Versorgung und Steuerung}
+		\label{apx:VersorgungSteuerungSensorik}
+		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Versorgung_Steuerung.pdf}
+		\newpage
+		\subsection{Ausgangslage der Bälle}
+		\label{apx:AusgangslageDerBaelle}}
+		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Ausgangslage_Baelle.pdf}
+		\newpage
 		\subsection{Weg des Balles}
+		\label{apx:WegDesBalles}
 		\includegraphics[page=1,scale=0.82,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Weg_des_Balles.pdf}
 \end{landscape} 
