Referenzen kursiv geschrieben

--- a/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
+++ b/Dokumentation/Morphologie/Anhang/Teilproblembeurteilung.tex
@@ -23,7 +23,7 @@
 		\includegraphics[page=1,scale=0.92,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Versorgung_Steuerung.pdf}
 		\newpage
 		\subsection{Ausgangslage der Bälle}
-		\label{apx:AusgangslageDerBaelle}}
+		\label{apx:AusgangslageDerBaelle}
 		\includegraphics[page=1,scale=0.95,clip,trim=14mm 60mm 18mm 26mm] {Morphologie/Anhang/Teilproblembeurteilung-Ausgangslage_Baelle.pdf}
 		\newpage
 		\subsection{Weg des Balles}
