--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -58,7 +58,7 @@
 			\end{itemize}
 			
 		\subsubsection{Startbefehlsübermittlung}
-			\textit{Ist zusammen mit Anhang \ref{apx:Startbefehlsuebermittlung} zu betrachten.}
+			\textit{Ist zusammen mit Anhang \ref{apx:Startbefehluebermittlung} zu betrachten.}
 			\begin{itemize}
 				\item Zuverlässigkeit\\
 				Bluetooth (und WLAN) basieren auf wohlbekannten, gut dokumentierten, standardisierten Technologien. Akustische Signale können einfach generiert und damit den Prozess erheblich stören.
@@ -69,7 +69,7 @@
 			\end{itemize}	
 			
 		\subsubsection{Rechenkapazität}
-			\textit{Ist zusammen mit Anhang \ref{apx:Rechenkapaziteat} zu betrachten.}
+			\textit{Ist zusammen mit Anhang \ref{apx:Rechenkapazitaet} zu betrachten.}
 			Es wird davon ausgegangen, dass ein Embedded Prozessor günstiger Bauart eingesetzt würde.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
