--- a/Dokumentation/Morphologie/Analyse.tex
+++ b/Dokumentation/Morphologie/Analyse.tex
@@ -48,11 +48,11 @@
 			Ist zusammen mit Anhang \ref{apx:StartgeraetEndgeraet} zu betrachten.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
-				Ein Notebook beruht auf wohlbekannten, gut dokumentierten, erprobten Technologien (drahtlos Kommunikation, sowie dazugehöriger Software). Taster muss neu gebaut werden, kann daher fehleranfällig sein.
+				Ein Notebook beruht auf langjährigen, gut dokumentierten und erprobten Technologien (drahtlos Kommunikation, sowie dazugehöriger Software). Ein Taster hingegen muss neu gebaut werden, kann daher fehleranfällig sein.
 				\item Kosten\\
-				Das Smartphone/Notebook wird von einem Teammitglied zur Verfügung gestellt. Ein Taster müsste neu gebaut respektive eingekauft werden.
+				Das Smartphone/Notebook wird von einem Teammitglied zur Verfügung gestellt. Ein Taster müsste neu gebaut oder eingekauft werden.
 				\item Kompatibilität\\
-				Ein Smartphone besitzt nur ein Betriebssystem mit beschränkten Funktionen. Mit einem Notebook kann man viele verschiedene Software-Lösungen erstellen.
+				Ein Smartphone besitzt nur ein Betriebssystem mit beschränkter Funktionalität. Mit einem Notebook kann man viele verschiedene Software-Lösungen erstellen.
 				\item Aufwand\\
 				Das Smartphone/Notebook wird von einem Teammitglied zur Verfügung gestellt, es entsteht vor allem softwaretechnischer Aufwand. Für einen Taster müsste ein eigenes kleines System entwickelt werden.
 			\end{itemize}
@@ -61,28 +61,28 @@
 			Ist zusammen mit Anhang \ref{apx:Startbefehlsuebermittlung} zu betrachten.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
-				Bluetooth (und WLAN) basieren auf wohlbekannten, gut dokumentierten, standardisierten Technologien. Akustische Signale können einfach generiert und damit den Prozess erheblich stören.
+				Bluetooth (und WLAN) basieren auf wohlbekannten, gut dokumentierten, standardisierten Technologien. Akustische Signale, sowie Infrarot sind hingegen eher störanfällig.
 				\item Kosten\\
-				Bluetooth (und WLAN) sind Teil der eingebauten Technologie in einem modernen Smartphone / Notebook. Bei Infrarot und Akustischen Signalen kostet der Empfänger.
+				Bluetooth (und WLAN) sind Teil der eingebauten Technologie in einem modernen Smartphone / Notebook. Für Infrarot und Akustischen Signalen müssten entsprechende Instrumente angeschafft werden.
 				\item Aufwand\\
-				Bluetooth (und WLAN) sind Teil der eingebauten Technologie in einem modernen Smartphone / Notebook und beruhen auf wohlbekannten, gut dokumentierten, standardisierten Technologien. Das Auswerten eines Akustischen Signals ist aufwändig, fehleranfällig und benötigt zusätzliche Elektronik.
+				Da jedes Teammitglied sowohl ein Smartphone, als auch einen Laptop mit WLAN/Bluetooth besitzt, wäre hier der Aufwand minimal. Das Auswerten eines Akustischen Signals ist hingegen aufwändig, fehleranfällig und benötigt zusätzliche Elektronik.
 			\end{itemize}	
 			
 		\subsubsection{Rechenkapazität}
 			Ist zusammen mit Anhang \ref{apx:Rechenkapaziteat} zu betrachten.
-			Es wird davon ausgegangen, dass ein Embedded Prozessor günstiger Bauart eingesetzt würde.
 			\begin{itemize}
 				\item Zuverlässigkeit\\
-				Smartphone und Embedded Prozessoren sind sehr zuverlässig, da sie on-board sind. Ein Notebook als Recheneinheit ist aufgrund der vielen Datenübermittlung fehleranfällig.
+				Smartphone und Embedded Prozessoren sind sehr zuverlässig, da sie on-board sind. Ein Notebook als externe Recheneinheit ist aufgrund der dafür benötigten Datenverbindung fehleranfällig.
 				\item Geschwindigkeit\\
-				Embedded Prozessoren sind für genau eine spezifische Aufgabe ausgelegt und dimensioniert. Ein Notebook als Recheneinheit ist aufgrund der vielen Datenübermittlung fehleranfällig und langsam.
+				Embedded Prozessoren sind für genau eine spezifische Aufgabe ausgelegt und dimensioniert. Ein Notebook als Recheneinheit ist aufgrund der Datenübermittlung fehleranfällig und tendenziell langsamer.
 			 	\item Gewicht\\
-			 	Embedded Prozessoren sind für genau eine spezifische Aufgabe ausgelegt und dimensioniert, beinhalten nur das absolut Nötigste. Das Smartphone wird als Teil des Produktegewichts gerechnet.
+			 	Embedded Prozessoren sind für genau eine spezifische Aufgabe ausgelegt und dimensioniert und beinhalten nur das absolut Notwendige. In einem Smartphone sind viele Module verbaut, von denen zur Aufgabenerfüllung eigentlich nur wenige gebraucht werden, was sich negativ auf das Gesamtgewicht auswirkt.
 				\item Kosten\\
 				Das Smartphone/Notebook wird von einem Teammitglied zur Verfügung gestellt. Ein eingebetteter Prozessor müsste zugekauft werden.
 				\item Aufwand\\
 				Für einen Embedded Prozessor müsste eine eigene Stromversorgung, drahtlos-Kommunikations-Modul, etc. gebaut werden. Ein Notebook beruht auf wohlbekannten, gut dokumentierten Technologien.
 			\end{itemize}
+			Zusätzliche Erläuterung: Es wird davon ausgegangen, dass ein Embedded Prozessor günstiger Bauart eingesetzt würde.
 			
 		\subsubsection{Sensorik}
 			Ist zusammen mit Anhang \ref{apx:Sensorik} zu betrachten.
@@ -90,13 +90,13 @@
 				\item Geschwindigkeit\\
 				Eine Foto mit einer Smartphone Kamera ist schnell geschossen und kann direkt im Smartphone bearbeitet werden. Ein Laser muss viele Punkte abscannen und dabei mechanisch geschwenkt werden.
 				\item Genauigkeit\\
-				Ein Laser misst viele Punkte, kann daher ein sehr detailliertes Abbild schaffen. Ultraschallmessungen sind laut Recherchen nicht sehr präzise.  
+				Ein Laser misst viele Punkte, kann daher ein sehr detailliertes Abbild schaffen. Ultraschallmessungen hingegen eher unpräzise.  
 				\item Zuverlässigkeit\\
-				Laservermessungen sind dank des detaillierten Abbilds sehr zuverlässig in der Korberkennung. Infrarot ist aufgrund des vielen Fremdeinflusses (bsp. Lichtstrahler an Spielfeldrand) sehr unzuverlässig.
+				Laservermessungen sind dank des detaillierten Abbilds zuverlässig in der Korberkennung. Infrarot ist aufgrund des vielen Fremdeinflusses (bsp. Lichtstrahler an Spielfeldrand) unzuverlässig.
 				\item Kosten\\
 				Das Smartphone mit integrierter Kamera wird von einem Teammitglied zur Verfügung gestellt. Für einen Laser muss aufgrund der mechanischen Justierung zusätzliche Bauteile eingekauft werden.
 				\item Aufwand\\
-				Ein Smartphone mit integrierter Kamera beruht auf wohlbekannten, gut dokumentierten Technologien. Für einen Laser muss aufgrund der mechanischen Justierung zusätzlichen Aufwand betrieben werden
+				Für die Objekterkennung mit Kamera gibt es bereits meherere bekannte Frameworks, was den Aufwand drastisch minimieren würde. Auf der anderen Seite muss bei Verwendung eines Lasers aufgrund der benötigten mechanischen Justierung zusätzlichen Aufwand betrieben werden.
 			\end{itemize}
 			
 		\subsubsection{Versorgung Steuerung / Sensorik}
@@ -114,12 +114,11 @@
 		
 		\subsubsection{Ausgangslage der Bälle}
 			Ist zusammen mit Anhang \ref{apx:AusgangslageDerBaelle} zu betrachten.
-			Es wird angenommen, dass die Kugel (gefüllt mit Bällen) geometrisch sein muss.
 			\begin{itemize}
 				\item Geschwindigkeit\\
-				Alle Bälle in einer grossen Kugel braucht wenig Zeit, ist daher die beste Lösung. Der Drehkranz ist schwerfällig und langsam.
+				Alle Bälle in einem Behälter braucht wenig Zeit, ist daher die beste Lösung. Der Drehkranz ist schwerfällig und langsam.
 				\item Gewicht\\
-				Der Trichter ist eine einfache, minimalistische Konstruktion, die wenig Gewicht aufweist. Der Drehkranz ist eine grosse, schwere Konstruktion mit mehreren Aktoren.
+				Der Trichter ist eine einfache, minimalistische Konstruktion, die wenig Gewicht aufweist. Der Drehkranz ist gegenteilig eine grosse, schwere Konstruktion mit mehreren Aktoren.
 				\item Zuverlässigkeit\\
 				Die Bälle in einem Trichter können schnell verstopfen. Ein sauber konstruiertes und aufgebautes Magazin ist sehr zuverlässig. 
 				\item Kosten\\
@@ -127,6 +126,7 @@
 				\item Aufwand\\
 				Die Umsetzung eines Trichters ist einfach und schnell erledigt. Der Drehkranz ist aufwändig.					
 			\end{itemize}
+			Zusätzliche Erläuterung: Bei der Beförderung der Bälle in einem Behälter wird davon ausgegangen, dass ein wohlgeformte geometrische Figur verwendet wird (bspw. Kugel).
 			
 			
 		\subsubsection{Weg des Balles}
